--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@
 /Chapter3/dist/
 /Chapter2/dist/
 /Chapter4/nbproject/private/
+/Chapter4/build/
+/Chapter4/dist/
+/Chapter5/nbproject/private/
+/Chapter5/build/
+/Chapter6/nbproject/private/
+/Chapter6/build/
