--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@
 /Chapter6/build/
 /Chapter7/nbproject/private/
 /Chapter7/build/
+/Chapter12/nbproject/private/
+/Chapter12/build/
+/Chapter12/dist/
